Fixed bug which occurred when loading newTask and editTask views.