@@ -8,12 +8,32 @@ repositories {
   mavenCentral()
 }
 
+run{
+  jvmArgs = [
+          "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+          "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+          "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+          "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+          "--add-exports=javafx.controls/com.sun.javafx.binding=com.jfoenix",
+          "--illegal-access=warn",
+          "--add-opens=javafx.controls/javafx.scene.control.skin=com.jfoenix",
+          "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+          "--add-opens=java.base/java.lang.reflect=com.jfoenix",
+          "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+          "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
+          "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
+          "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
+          "--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix"
+  ]
+}
+
 dependencies {
   implementation 'org.apache.commons:commons-text'
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.5.1'
   compile 'com.jfoenix:jfoenix:9.0.10' //This is for java 9+. For java 8: compile 'com.jfoenix:jfoenix:8.0.10'
+
 }
 
 test {
@@ -22,7 +42,7 @@ test {
 
 javafx {
   version = "13"
-  modules = ['javafx.controls', 'javafx.fxml']
+  modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
 }
 
 application {
